body overflow fix

--- a/newamericadotorg/assets/scss/base/_initial.scss
+++ b/newamericadotorg/assets/scss/base/_initial.scss
@@ -24,7 +24,6 @@ html, body{
   margin: 0;
   padding: 0;
   width: 100vw;
-  overflow-x: hidden;
 }
 
 body.scroll-disabled {
